@@ -29,7 +29,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import java.io.IOException;
 import java.math.BigInteger;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.time.Duration;
@@ -139,7 +138,7 @@ public class CompactionPriorityQueueMetricsIT extends SharedMiniClusterBase {
     }
     queueMetrics.clear();
     shutdownTailer.set(false);
-    metricsTailer = Threads.createThread("metric-tailer", () -> {
+    metricsTailer = Threads.createNonCriticalThread("metric-tailer", () -> {
       while (!shutdownTailer.get()) {
         List<String> statsDMetrics = sink.getLines();
         for (String s : statsDMetrics) {
@@ -286,7 +285,7 @@ public class CompactionPriorityQueueMetricsIT extends SharedMiniClusterBase {
       justification = "path provided by test; sha-1 is okay for test")
   private String hash(String filename) {
     try {
-      byte[] data = Files.readAllBytes(Paths.get(filename.replaceFirst("^file:", "")));
+      byte[] data = Files.readAllBytes(java.nio.file.Path.of(filename.replaceFirst("^file:", "")));
       byte[] hash = MessageDigest.getInstance("SHA1").digest(data);
       return new BigInteger(1, hash).toString(16);
     } catch (IOException | NoSuchAlgorithmException e) {
